@@ -312,3 +312,4 @@ Revision	Version Updated		Log Message
 290		C++			Write all countries to the file, even if they don't exist yet. Fixes releasing cultural unions, etc.
 291		C++			A little output cleanup.
 292		N/A			Build and test changes for configuration file.
+293		C++			Updates to literacy calculations.
